# poly-match

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/poly_match_rs/: __main__.py  baseline.py  v0.py  v1.py  v2.py
python/tests/: test_all.py
src/: lib.rs  v0.rs  v1.rs  v2.rs
