[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "poly-match-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "jsonargparse>=4.32.1",
    "rich>=13.8.1",
    "numpy>=1.24.4",
]

[project.scripts]
poly-match = "poly_match_rs.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest",
]


[tool.maturin]
python-source = "python"
module-name = "poly_match_rs.core"
features = ["pyo3/extension-module"]
